flicker bugfix

--- a/css/header.css
+++ b/css/header.css
@@ -43,12 +43,13 @@ nav ul li a {
     transition: color 0.5s ease-in-out;
 }
   
-nav ul li a:before {
+nav ul li a::before {
     content: "";
     position: absolute;
     width: 100%;
     height: 2px;
     background-color: lightgray;
+    z-index: -1;
     bottom: 0;
     transform-origin: left;
     transform: scaleX(0);
